--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ body {
     text-transform: uppercase;
 }
 
+h3 a {
+    text-decoration: none;
+}
+
 .layout {
     max-width: 700px;
     min-width: 100px;
