--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,17 @@ div {
     background-repeat: no-repeat;
 }
 
+/* for footer tablet/mobile */
+
+.logo-front-footer {
+    margin: 5px;
+    padding: 90px;
+    background-image: url(../img/kea-logo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    display: none;
+}
+
 .search-nav {
     width: 20px;
     position: fixed;
@@ -139,8 +150,8 @@ label {
 
 .local-nav a {
     padding: 15px;
-    padding-right: 25px;
-    padding-left: 25px;
+    padding-right: 22px;
+    /*padding-left: 25px;*/
     display: block;
     font-size: 1em;
     color: black;
@@ -149,6 +160,7 @@ label {
     text-decoration: none;
     text-transform: uppercase;
     font-family: 'lato', sans-serif;
+    overflow-y: auto;
 }
 
 .local-nav .nav-title {
@@ -158,7 +170,7 @@ label {
     text-align: center;
     color: #140D0D;
     font-family: 'Lato', sans-serif;
-    text-shadow: 2px 2px #f4e0fc;
+    text-shadow: 2px 2px #FFE8E6;
 
 }
 
@@ -171,7 +183,7 @@ label {
 #career-nav:hover,
 #contact-nav:hover {
     color: white;
-    background-color: #f4e0fc;
+    background-color: #FFE8E6;
     transition: all 0.3s;
 }
 
@@ -260,8 +272,10 @@ label {
 
 .project {
     padding: 40px 10px 40px 10px;
-    font-size 12px;
+    font-size: 18px;
     background-color: #FFACA3;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 #mmd1-btn:hover,
@@ -526,6 +540,15 @@ footer {
         /*background-color: red;*/
     }
 
+    .logo-front-footer/* for footer tablet/mobile */
+        {
+        margin: 5px;
+        padding: 90px;
+        background-image: url(../img/kea-logo.png);
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
     .search-nav {
         display: none;
     }
@@ -543,15 +566,15 @@ footer {
         max-width: 50px;
     }
     h1 {
-        font-size: 30px;
+        font-size: 25px;
     }
 
     h2 {
-        0.8em;
+        font-size: 1.1em;
     }
 
     h3 {
-        0.8em;
+        font-size: 0.9em;
     }
 
     p {
@@ -563,12 +586,12 @@ footer {
     }
 
     .layout {
-        max-width: 700px;
-        min-width: 100px;
+        max-width: 400px;
+        min-width: 50px;
         margin: 10px auto 10px auto;
         border: none;
-        padding-top: 10em;
-        padding-left: 10em;
+        padding-top: 5em;
+        padding-left: 3em;
         padding-right: 0.5em;
         padding-bottom: 2em;
     }
@@ -613,6 +636,7 @@ footer {
 
     .big-title {
         font-size: 2em;
+        overflow: hidden;
     }
 
     /* BURGER BAR*/
@@ -646,53 +670,53 @@ footer {
         display: block;
         top: 3.2em;
         left: 0;
-        height: 70vh;
+        height: 55vh;
         padding: 0;
         background: linear-gradient(#FFACA3, #FFA39D, #FF9C96, #FF8B81, #F8817B);
+        font-size: 0.8em;
+        z-index: 2;
+        margin: 10px;
     }
 
-    .local nav a {
-        padding: 5px;
-        padding-right: 5px;
-        padding-left: 25px;
+    .local-nav a {
+        padding: 10px;
+        padding-right: 10px;
         display: block;
-        font-size: 0.8em;
+        font-size: 1em;
         color: black;
         font-weight: 500;
         text-transform: capitalize;
         text-decoration: none;
         text-transform: uppercase;
         font-family: 'lato', sans-serif;
-        background-color: white;
+        overflow-y: auto;
     }
-}
 
-.local-nav .nav-title {
-    font-size: 50px;
-    text-transform: capitalize;
-    font-weight: 400;
-    text-align: center;
-    color: #140D0D;
-    font-family: 'Lato', sans-serif;
-    text-shadow: 2px 2px #F8817B;
-}
+    .local-nav .nav-title {
+        font-size: 30px;
+        text-transform: capitalize;
+        text-align: center;
+        color: #140D0D;
+        font-family: 'Lato', sans-serif;
+        text-shadow: 2px 2px white;
+    }
 
-#intro-nav:hover,
-#program-nav:hover,
-#adm-nav:hover,
-#abroad-nav:hover,
-#student-nav:hover,
-#top-nav:hover,
-#career-nav:hover,
-#contact-nav:hover {
-    color: white;
-    background-color: #FFACA3;
-    transition: all 0.3s;
-}
+    #intro-nav:hover,
+    #program-nav:hover,
+    #adm-nav:hover,
+    #abroad-nav:hover,
+    #student-nav:hover,
+    #top-nav:hover,
+    #career-nav:hover,
+    #contact-nav:hover {
+        color: white;
+        background-color: #FFACA3;
+        transition: all 0.3s;
+    }
 
-.active-color {
-    color: white;
-    background-color: #F8817B;
-}
+    .active-color {
+        color: white;
+        background-color: #F8817B;
+    }
 
 }
