--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 * {
     font-family: 'Open Sans', arial, helvetica, sans-serif;
     overflow-x: hidden;
-    background-image: url("paper.gif");
 }
 
 body {
@@ -33,7 +32,7 @@ h3 a {
     margin: 10px auto 10px auto;
     border: none;
     padding-top: 12em;
-    padding-left: 1em;
+    padding-left: 6em;
     padding-right: 1em;
     padding-bottom: 2em;
 }
@@ -137,6 +136,7 @@ input {
 
 label {
     display: none;
+    cursor: pointer;
 }
 
 .local-nav {
@@ -202,6 +202,7 @@ label {
     width: 100vw;
     height: 90vh;
     background: linear-gradient(#FFACA3, #FFA39D, #FF9C96, #FF8B81, #F8817B);
+    overflow-x: hidden;
 }
 
 .title {
@@ -477,13 +478,16 @@ button {
 .contact-table {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 40px;
+    padding: 0px;
     overflow: hidden;
+}
+
+.contact-table p{
+    padding: 15px;
 }
 
 .email {
     padding: 20px;
-    padding-top: 30px;
     overflow-x: hidden;
     overflow-y: hidden;
 }
@@ -522,7 +526,7 @@ button {
 textarea {
     max-width: 400px;
     max-height: 120px;
-    overflow: hidden;
+    overflow-x: visible;
 }
 
 
@@ -587,17 +591,18 @@ footer {
     }
 
     .layout {
-        max-width: 400px;
+        max-width: 500px;
         min-width: 50px;
         margin: 10px auto 10px auto;
         border: none;
-        padding-left: 3em;
+        padding-left: 10em;
         padding-right: 0.5em;
         padding-bottom: 2em;
     }
 
     .big-title {
         font-size: 2.5em;
+        padding-right: 3em;
     }
 
     .icons img {
@@ -606,6 +611,10 @@ footer {
 
     .local-nav {
         padding: 0;
+    }
+    
+    .modal-title{
+        font-size: 30px;
     }
 }
 
@@ -628,14 +637,14 @@ footer {
         min-width: 50px;
         margin: 10px auto 10px auto;
         border: none;
-        padding-top: 3em;
+        padding-top: 5.5em;
         padding-left: 1em;
         padding-right: 0.5em;
         padding-bottom: 2em;
     }
 
     .big-title {
-        font-size: 2em;
+        font-size: 1.8em;
         overflow: hidden;
         padding: 15px;
         padding-right: 150px;
@@ -669,9 +678,9 @@ footer {
     }
 
     input:checked ~ nav {
-        max-height: 500px;
+        max-height: 350px;
     }
-
+ 
     .local-nav {
         position: fixed;
         display: block;
@@ -725,6 +734,22 @@ footer {
     .active-color {
         color: white;
         background-color: #F8817B;
+    }
+    
+    .email{
+        padding:0;
+    }
+    textarea{
+        width: 80%;
+    }
+    
+    .contact-table{
+        margin: 0;
+        padding: 0;
+    }
+    
+    .contact-table p{
+        margin: 0;
     }
 
 }
